Fix-2:Modifiy directory file